practica-a/mi-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mi-statefulset

spec:
  serviceName: "mi-servicio"
  replicas: 3
  selector:
    matchLabels:
      app: mi-aplicacion
  
  template:
    metadata:
      labels:
        app: mi-aplicacion
      ports:
      - containerPort: 3000 
    spec:
      containers:
      - name: mi-contenedor
        image: imagen-de-contenedor
        volumeMounts:
        - name: almacenamiento
          mountPath: /ruta/en/el/contenedor
  
  volumeClaimTemplates:
  - metadata:
      name: almacenamiento
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
