practica-a/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo   #! Endpoint para acceder a mongo (como si fuera la ip)
  labels:
    run: mongo
    
spec:
  selector: 
    app: mongo   #! Grupo de pods que manejará el servicio
  ports:
    - protocol: TCP
      port: 8080      #! Puerto que expone el servicio (sea al exterior o no)
      targetPort: 27017     #! Debe ser el mismo que el del contenedor del deployment
